package copiable

// Copiable определяет интерфейс для объектов, которые могут быть скопированы.
type Copiable interface {
	// Copy создает и возвращает копию объекта.
	// Реализация обязана вернуть тот же тип которым она является.
	Copy() Copiable
}

// Copy создает и возвращает копию объекта, реализующего интерфейс Copiable.
//
// T - тип объекта, который должен быть скопирован.
// c - объект, реализующий интерфейс Copiable, для которого будет создана копия.
//
// Возвращает копию объекта типа T.
func Copy[T any](c Copiable) T {
	return c.Copy().(T)
}
